--- a/pom.xml
+++ b/pom.xml
@@ -311,6 +311,11 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.4.GA</version>
+		</dependency>
 
 
 	</dependencies>
