--- a/pom.xml
+++ b/pom.xml
@@ -318,5 +318,12 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.20</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
