--- a/pom.xml
+++ b/pom.xml
@@ -348,6 +348,10 @@
             <artifactId>xmemcached</artifactId>
             <version>2.0.1</version>
         </dependency>
-
+        <dependency>
+                <groupId>com.sun.tools.btrace</groupId>
+                <artifactId>btrace-client</artifactId>
+                <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
