--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>study</groupId>
-    <artifactId>maven-demo</artifactId>
+    <artifactId>studyDemo</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>study-demo</name>
@@ -32,10 +32,10 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3.2</version>
+                    <version>3.7.0</version>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
@@ -189,6 +189,19 @@
             <version>5.1.3.Final</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.2</version>
+        </dependency>
+
         <dependency>
             <groupId>com.cloudhopper.proxool</groupId>
             <artifactId>proxool</artifactId>
@@ -252,19 +265,46 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
-            <version>4.1.2</version>
+            <version>4.5.5</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.1.2</version>
+            <version>4.5.2</version>
         </dependency>
 
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.machinepublishers</groupId>
+            <artifactId>jbrowserdriver</artifactId>
+            <version>1.0.0-RC1</version>
+        </dependency>
+
+
+        <!-- WebCollector dependency -->
+        <dependency>
+            <groupId>cn.edu.hfut.dmic.webcollector</groupId>
+            <artifactId>WebCollector</artifactId>
+            <version>2.09</version>
+        </dependency>
+        <!-- selenium -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.44.0</version>
+        </dependency>
+        <!-- phantomjsdriver(selenium webdriver 第三方支持) -->
+        <dependency>
+            <groupId>com.github.detro</groupId>
+            <artifactId>phantomjsdriver</artifactId>
+            <version>1.2.0</version>
         </dependency>
 
 
@@ -289,6 +329,7 @@
             <artifactId>lombok</artifactId>
             <version>1.16.6</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.twitter4j</groupId>
@@ -350,9 +391,17 @@
         </dependency>
 
         <dependency>
-                <groupId>com.sun.tools.btrace</groupId>
-                <artifactId>btrace-client</artifactId>
-                <version>1.2.3</version>
+            <groupId>fm.lizhi.commons</groupId>
+            <artifactId>lz-commons-serviceclient</artifactId>
+            <version>0.2.4</version>
         </dependency>
+
+       <!-- <dependency>
+            <groupId>fm.lizhi</groupId>
+            <artifactId>lz-voice</artifactId>
+            <version>2.1.3-SNAPSHOT</version>
+        </dependency>-->
     </dependencies>
+
+
 </project>
