--- a/pom.xml
+++ b/pom.xml
@@ -98,11 +98,13 @@
     </build>
     <dependencies>
 
+
         <dependency>
             <groupId>fm.lizhi.commons</groupId>
             <artifactId>lz-commons-util</artifactId>
-            <version>2.3.7</version>
+            <version>2.2.8-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -168,7 +170,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <version>2.6</version>
         </dependency>
 
         <dependency>
